--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-rate-limit": "^3.2.0",
     "jsonwebtoken": "^8.3.0",
     "log4js": "^3.0.5",
+    "nodemailer": "^4.6.8",
     "prisma-client-lib": "^1.18.0",
     "validator": "^10.8.0"
   },
