Moved to prisma-binding

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "prisma-deploy": "prisma deploy -e .env && prisma generate -e .env",
+    "prisma-deploy": "cd database && prisma deploy -e ../.env",
     "dev-clear": "sudo rm -rf ./data && docker-compose -f docker_compose_dev.yml rm -f",
     "dev-start": "docker-compose -f docker_compose_dev.yml up -d",
     "dev-stop": "docker-compose -f docker_compose_dev.yml stop",
-    "prisma-seed": "prisma seed -r -e .env",
+    "prisma-seed": "cd database && prisma seed -r -e ../.env",
     "prod-build": "docker-compose build",
     "prod-up": "docker-compose up -d",
     "prod-start": "docker-compose start",
@@ -21,9 +21,11 @@
     "argon2": "^0.19.3",
     "express": "^4.16.3",
     "express-rate-limit": "^3.2.0",
+    "graphql-import": "^0.7.1",
     "jsonwebtoken": "^8.3.0",
     "log4js": "^3.0.5",
     "nodemailer": "^4.6.8",
+    "prisma-binding": "^2.1.6",
     "prisma-client-lib": "^1.18.0",
     "pug": "^2.0.3",
     "validator": "^10.8.0"
