Reverted to prisma-client

--- a/database/prisma.yml
+++ b/database/prisma.yml
@@ -5,6 +5,9 @@ seed:
 hooks:
     post-deploy:
     - graphql get-schema --project database
+generate:
+-   generator: javascript-client
+    output: ../generated/prisma-client/
 
 # If specified, the `secret` must be used to generate a JWT which is attached
 # to the `Authorization` header of HTTP requests made against the Prisma API.
