--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
                         port: $POSTGRES_PORT
                         user: $POSTGRES_USER
                         password: $POSTGRES_PASSWORD
+                        connectionLimit: 15
 networks:
     tm_marketplace:
         driver: bridge
