--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "prisma-deploy": "cd database && prisma deploy -e ../.env",
+    "prisma-deploy-f": "cd database && prisma deploy -f -e ../.env",
+    "prisma-reset": "cd database && prisma reset -e ../.env",
     "dev-clear": "sudo rm -rf ./data && docker-compose -f docker_compose_dev.yml rm -f",
     "dev-start": "docker-compose -f docker_compose_dev.yml up -d",
     "dev-stop": "docker-compose -f docker_compose_dev.yml stop",
