--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "prod-stop": "docker-compose stop"
   },
   "dependencies": {
-    "apollo-server-express": "^2.0.4",
     "argon2": "^0.19.3",
     "express": "^4.16.3",
     "express-rate-limit": "^3.2.0",
     "graphql-import": "^0.7.1",
+    "graphql-shield": "^3.2.5",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
     "log4js": "^3.0.5",
