--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "dev-prisma-deploy": "cd database && prisma deploy -e ../.env",
     "dev-prisma-deploy-f": "cd database && prisma deploy -f -e ../.env",
     "dev-prisma-reset": "cd database && prisma reset -e ../.env",
-    "dev-clear": "sudo rm -rf ./data && docker-compose -f docker_compose_dev.yml rm -f",
+    "dev-clear": "sudo rm -rf ./data ./uploads && docker-compose -f docker_compose_dev.yml rm -f",
     "dev-start": "docker-compose -f docker_compose_dev.yml up -d",
     "dev-stop": "docker-compose -f docker_compose_dev.yml stop",
     "dev-prisma-seed": "cd database && prisma seed -r -e ../.env",
     "prod-build": "docker-compose build",
     "prod-up": "docker-compose up -d",
     "prod-start": "docker-compose start",
-    "prod-clear": "sudo rm -rf ./data && docker-compose rm -f",
+    "prod-clear": "sudo rm -rf ./data ./uploads && docker-compose rm -f",
     "prod-stop": "docker-compose stop",
     "prod-bash": "docker-compose exec app bash"
   },
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.3.0",
     "log4js": "^3.0.5",
     "moment": "^2.22.2",
+    "multer": "^1.4.1",
     "nodemailer": "^4.6.8",
     "prisma-binding": "^2.1.6",
     "prisma-client-lib": "^1.18.0",
