Fixed prod start scripts

--- a/.env_example
+++ b/.env_example
@@ -2,7 +2,7 @@ IS_DOCKER=true
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=marketplace
+POSTGRES_DB=prisma
 PGADMIN_DEFAULT_USER=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=admin
 POSTGRES_PORT=5432
