--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "cd database && npx prisma deploy && cd .. && node server.js",
     "dev-start-app": "npm run dev-prisma-deploy && node server.js",
-    "dev-prisma-deploy": "cd database && prisma deploy -e ../.env",
-    "dev-prisma-deploy-f": "cd database && prisma deploy -f -e ../.env",
+    "dev-prisma-deploy": "cd database && prisma deploy -e ../.env && prisma generate -e ../.env",
+    "dev-prisma-deploy-f": "cd database && prisma deploy -f -e ../.env && prisma generate -e ../.env",
     "dev-prisma-reset": "cd database && prisma reset -e ../.env",
     "dev-prisma-seed": "cd database && prisma seed -r -e ../.env",
     "dev-clear": "sudo rm -rf ./data ./uploads && docker-compose -f docker_compose_dev.yml rm -f",
@@ -37,6 +37,9 @@
     "prisma-client-lib": "^1.18.0",
     "pug": "^2.0.3",
     "validator": "^10.8.0"
+  },
+  "resolutions": {
+    "graphql": "^14.0.2"
   },
   "devDependencies": {
     "prisma": "^1.18.1"
