Added job scheduler

--- a/.env_example
+++ b/.env_example
@@ -7,4 +7,7 @@ PGADMIN_DEFAULT_USER=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=admin
 POSTGRES_PORT=5432
 
+MONGODB_HOST=mongodb
+MONGODB_PORT=27017
+
 PRISMA_ENDPOINT=http://localhost:4466
