--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "argon2": "^0.19.3",
     "express": "^4.16.3",
     "express-rate-limit": "^3.2.0",
+    "graphql-cost-analysis": "^1.0.2",
     "graphql-import": "^0.7.1",
     "graphql-shield": "^3.2.5",
     "graphql-yoga": "^1.16.2",
