Added log4js file appender

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
         volumes:
         - './config:/app/config'
         - './uploads:/app/uploads'
+        - './logs:/app/logs'
     mongodb:
         image: 'mongo:latest'
         #restart: always
