--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemailer": "^4.6.8",
     "prisma-client-lib": "^1.18.0",
     "pug": "^2.0.3",
+    "request": "^2.88.0",
     "validator": "^10.8.0"
   },
   "resolutions": {
