--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
   "name": "ux_backend",
   "version": "0.0.1",
-  "main": "server.js",
+  "main": "src/server.js",
   "license": "MIT",
   "scripts": {
-    "start": "cd database && npx prisma deploy && cd .. && node server.js",
-    "dev-start-app": "npm run dev-prisma-deploy && node server.js",
-    "dev-prisma-deploy": "npm run dev-generate-docs && cd database && prisma deploy -e ../.env && prisma generate -e ../.env",
-    "dev-prisma-deploy-f": "npm run dev-generate-docs && cd database && prisma deploy -f -e ../.env && prisma generate -e ../.env",
-    "dev-prisma-reset": "cd database && prisma reset -e ../.env",
-    "dev-prisma-seed": "cd database && prisma seed -r -e ../.env",
-    "dev-clear": "sudo rm -rf ./data ./uploads ./logs && docker-compose -f docker_compose_dev.yml rm -f",
+    "dev-start-app": "npm run dev-prisma-deploy && node src/server.js",
+    "dev-prisma-deploy": "npm run dev-generate-docs && cd src/database && prisma deploy -e ../../.env && prisma generate -e ../../.env",
+    "dev-prisma-deploy-f": "npm run dev-generate-docs && cd src/database && prisma deploy -f -e ../../.env && prisma generate -e ../../.env",
+    "dev-prisma-reset": "cd src/database && prisma reset -e ../../.env",
+    "dev-prisma-seed": "cd src/database && prisma seed -r -e ../../.env",
+    "dev-clear": "npm run clear && docker-compose -f docker_compose_dev.yml rm -f",
     "dev-start": "docker-compose -f docker_compose_dev.yml up -d",
     "dev-stop": "docker-compose -f docker_compose_dev.yml stop",
     "dev-generate-docs": "cd ./docs && npx redoc-cli bundle swagger.yml && cd ..",
+    "clear": "sudo rm -rf ./data ./uploads ./logs ./config",
     "prod-build": "docker-compose build",
+    "prod-init": "mkdir -p data/config && cp src/config/config.js data/config/config.js && cp .env_example .env",
+    "prod-start-app": "cd src/database && npx prisma deploy && cd .. && node server.js",
     "prod-up": "docker-compose up -d",
     "prod-start": "docker-compose start",
     "prod-full-restart": "npm run prod-stop && npm run prod-clear && npm run prod-build && npm run prod-up",
-    "prod-clear": "sudo rm -rf ./data ./uploads ./logs && docker-compose rm -f",
+    "prod-clear": "npm run clear && docker-compose rm -f",
     "prod-logs": "docker-compose logs -f",
     "prod-stop": "docker-compose stop",
-    "test": "mocha"
+    "test": "mocha src/test"
   },
   "dependencies": {
     "agenda": "^2.0.2",
