--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,3 @@
-IS_DOCKER=true
-
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=prisma
@@ -10,4 +8,4 @@ POSTGRES_PORT=5432
 MONGODB_HOST=mongodb
 MONGODB_PORT=27017
 
-PRISMA_ENDPOINT=http://localhost:4466
+PRISMA_ENDPOINT=http://localhost:4466 # change to "http://prisma:4466" in production
