--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev-prisma-deploy-f": "npm run dev-generate-docs && cd src/database && prisma deploy -f -e ../../.env && prisma generate -e ../../.env",
     "dev-prisma-reset": "cd src/database && prisma reset -e ../../.env",
     "dev-prisma-seed": "cd src/database && prisma seed -r -e ../../.env",
-    "dev-clear": "npm run clear && docker-compose -f docker_compose_dev.yml rm -f",
-    "dev-start": "docker-compose -f docker_compose_dev.yml up -d",
-    "dev-stop": "docker-compose -f docker_compose_dev.yml stop",
+    "dev-clear": "npm run clear && docker-compose -f docker-compose-dev.yml rm -f",
+    "dev-start": "docker-compose -f docker-compose-dev.yml up -d",
+    "dev-stop": "docker-compose -f docker-compose-dev.yml stop",
     "dev-generate-docs": "cd ./docs && npx redoc-cli bundle swagger.yml && cd ..",
     "clear": "sudo rm -rf ./data ./uploads ./logs ./config",
     "prod-build": "docker-compose build",
