--- a/.env_example
+++ b/.env_example
@@ -8,4 +8,5 @@ POSTGRES_PORT=5432
 MONGODB_HOST=mongodb
 MONGODB_PORT=27017
 
-PRISMA_ENDPOINT=http://localhost:4466 # change to "http://prisma:4466" in production
+# change to "http://prisma:4466" in production
+PRISMA_ENDPOINT=http://localhost:4466
