--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ux_backend",
   "version": "0.0.1",
-  "main": "src/server.js",
+  "main": "src/cluster.js",
   "license": "MIT",
   "scripts": {
-    "dev-start-app": "npm run dev-prisma-deploy && node src/server.js",
+    "dev-start-app": "npm run dev-prisma-deploy && node src/cluster.js",
     "dev-prisma-deploy": "npm run dev-generate-docs && cd src/database && prisma deploy -e ../../.env && prisma generate -e ../../.env",
     "dev-prisma-deploy-f": "npm run dev-generate-docs && cd src/database && prisma deploy -f -e ../../.env && prisma generate -e ../../.env",
     "dev-prisma-reset": "cd src/database && prisma reset -e ../../.env",
@@ -16,7 +16,7 @@
     "clear": "sudo rm -rf ./data ./uploads ./logs ./config",
     "prod-build": "docker-compose build",
     "prod-init": "mkdir -p data/config && cp src/config/config.js data/config/config.js && cp .env_example .env",
-    "prod-start-app": "cd src/database && npx prisma deploy && cd .. && node server.js",
+    "prod-start-app": "cd src/database && npx prisma deploy && cd .. && node cluster.js",
     "prod-up": "docker-compose up -d",
     "prod-start": "docker-compose start",
     "prod-full-restart": "npm run prod-stop && npm run prod-clear && npm run prod-build && npm run prod-up",
@@ -30,7 +30,6 @@
     "agendash": "^0.4.0",
     "argon2": "^0.19.3",
     "compression": "^1.7.3",
-    "dataloader": "^1.4.0",
     "express": "^4.16.4",
     "express-rate-limit": "^3.3.0",
     "graphql-cost-analysis": "^1.0.2",
@@ -43,8 +42,11 @@
     "moment": "^2.22.2",
     "multer": "^1.4.1",
     "nodemailer": "^4.6.8",
+    "pg": "^7.6.0",
     "prisma-client-lib": "^1.19.3",
     "pug": "^2.0.3",
+    "rate-limit-redis": "^1.5.0",
+    "redis": "^2.8.0",
     "request": "^2.88.0",
     "validator": "^10.8.0"
   },
