--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "graphql-shield": "^4.0.1",
     "graphql-yoga": "^1.16.7",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
     "log4js": "^3.0.6",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
