Added author field

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ux_backend",
   "version": "0.0.1",
   "main": "src/cluster.js",
+  "author": "uxname",
   "license": "MIT",
   "scripts": {
     "dev-start-app": "npm run dev-prisma-deploy && node src/cluster.js",
