--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rate-limit-redis": "^1.5.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
+    "terminal-kit": "^1.26.4",
     "validator": "^10.9.0"
   },
   "resolutions": {
