Changed npm scripts format

--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "author": "uxname",
   "license": "MIT",
   "scripts": {
-    "dev-start-simple": "nodemon -e \"js json graphql\" node src/server.js",
-    "dev-start-app": "npm run dev-prisma-deploy && node src/cluster.js",
-    "dev-prisma-deploy": "npm run dev-generate-docs && cd src/database && prisma deploy -e ../../.env && prisma generate -e ../../.env",
-    "dev-prisma-deploy-f": "npm run dev-generate-docs && cd src/database && prisma deploy -f -e ../../.env && prisma generate -e ../../.env",
-    "dev-prisma-reset": "cd src/database && prisma reset -e ../../.env",
-    "dev-prisma-seed": "cd src/database && prisma seed -r -e ../../.env",
-    "dev-clear": "npm run clear && docker-compose -f docker-compose-dev.yml rm -f",
-    "dev-start": "docker-compose -f docker-compose-dev.yml up -d",
-    "dev-stop": "docker-compose -f docker-compose-dev.yml stop",
-    "dev-generate-docs": "cd ./docs && npx redoc-cli bundle swagger.yml && cd ..",
+    "dev:start-simple": "nodemon -e \"js json graphql\" node src/server.js",
+    "dev:start-app": "npm run dev:prisma-deploy && node src/cluster.js",
+    "dev:prisma-deploy": "npm run dev:generate-docs && cd src/database && prisma deploy -e ../../.env && prisma generate -e ../../.env",
+    "dev:prisma-deploy-f": "npm run dev:generate-docs && cd src/database && prisma deploy -f -e ../../.env && prisma generate -e ../../.env",
+    "dev:prisma-reset": "cd src/database && prisma reset -e ../../.env",
+    "dev:prisma-seed": "cd src/database && prisma seed -r -e ../../.env",
+    "dev:clear": "npm run clear && docker-compose -f docker-compose-dev.yml rm -f",
+    "dev:start": "docker-compose -f docker-compose-dev.yml up -d",
+    "dev:stop": "docker-compose -f docker-compose-dev.yml stop",
+    "dev:generate-docs": "cd ./docs && npx redoc-cli bundle swagger.yml && cd ..",
     "clear": "sudo rm -rf ./data ./uploads ./logs ./config",
-    "prod-build": "docker-compose build",
-    "prod-init": "mkdir -p data/config && cp src/config/config.js data/config/config.js && cp .env_example .env",
-    "prod-start-app": "cd src/database && npx prisma deploy && cd .. && node cluster.js",
-    "prod-up": "docker-compose up -d",
-    "prod-start": "docker-compose start",
-    "prod-full-restart": "npm run prod-stop && npm run prod-clear && npm run prod-build && npm run prod-up",
-    "prod-clear": "npm run clear && docker-compose rm -f",
-    "prod-logs": "docker-compose logs -f",
-    "prod-stop": "docker-compose stop",
+    "prod:build": "docker-compose build",
+    "prod:init": "mkdir -p data/config && cp src/config/config.js data/config/config.js && cp .env_example .env",
+    "prod:start-app": "cd src/database && npx prisma deploy && cd .. && node cluster.js",
+    "prod:up": "docker-compose up -d",
+    "prod:start": "docker-compose start",
+    "prod:full-restart": "npm run prod:stop && npm run prod:clear && npm run prod:build && npm run prod:up",
+    "prod:clear": "npm run clear && docker-compose rm -f",
+    "prod:logs": "docker-compose logs -f",
+    "prod:stop": "docker-compose stop",
     "test": "mocha src/test",
     "sonar": "npx sonarqube-scanner -D project.settings=sonar-scanner.properties",
     "sms": "node src/helper/SecureMemStorageCLI.js"
