--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev:start-simple": "nodemon -e \"js json graphql\" node src/server.js",
     "dev:start-app": "npm run dev:prisma-deploy && node src/cluster.js",
     "dev:prisma-deploy": "npm run dev:generate-docs && cd src/database && prisma deploy -e ../../.env && prisma generate -e ../../.env",
+    "prisma-export": "cd src/database && mkdir -p ../../prisma/ && prisma export -e ../../.env -p ../../prisma/export_import.zip",
+    "prisma-import": "cd src/database && prisma import -e ../../.env -d ../../prisma/export_import.zip",
     "dev:prisma-deploy-f": "npm run dev:generate-docs && cd src/database && prisma deploy -f -e ../../.env && prisma generate -e ../../.env",
     "dev:prisma-reset": "cd src/database && prisma reset -e ../../.env",
     "dev:prisma-seed": "cd src/database && prisma seed -r -e ../../.env",
@@ -15,7 +17,7 @@
     "dev:start": "docker-compose -f docker-compose-dev.yml up -d",
     "dev:stop": "docker-compose -f docker-compose-dev.yml stop",
     "dev:generate-docs": "cd ./docs && npx redoc-cli bundle swagger.yml && cd ..",
-    "clear": "sudo rm -rf ./data ./uploads ./logs ./config",
+    "clear": "sudo rm -rf ./data ./uploads ./logs ./config ./prisma",
     "prod:build": "docker-compose build",
     "prod:init": "mkdir -p data/config && cp src/config/config.js data/config/config.js && cp .env_example .env",
     "prod:start-app": "cd src/database && npx prisma deploy && cd .. && node cluster.js",
