--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "dependencies": {
     "agenda": "^2.0.2",
     "agendash": "^0.4.0",
+    "apollo-link-http": "^1.5.7",
+    "node-fetch": "^2.3.0",
+    "graphql-tools": "^4.0.3",
     "argon2": "^0.20.0",
     "compression": "^1.7.3",
     "express": "^4.16.4",
@@ -63,7 +66,7 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.7",
-    "prisma": "^1.22.1",
+    "prisma": "^1.22.2",
     "redoc-cli": "^0.7.0"
   }
 }
