--- a/package.json
+++ b/package.json
@@ -33,32 +33,32 @@
   "dependencies": {
     "agenda": "^2.0.2",
     "agendash": "^0.4.0",
-    "apollo-link-http": "^1.5.9",
-    "node-fetch": "^2.3.0",
-    "graphql-tools": "^4.0.4",
+    "apollo-link-http": "^1.5.11",
     "argon2": "^0.20.1",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "express-rate-limit": "^3.3.2",
     "graphql-cost-analysis": "^1.0.3",
     "graphql-import": "^0.7.1",
-    "graphql-shield": "^5.1.0",
-    "graphql-yoga": "^1.17.1",
+    "graphql-shield": "^5.1.1",
+    "graphql-tools": "^4.0.4",
+    "graphql-yoga": "^1.17.2",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "log4js": "^4.0.1",
+    "log4js": "^4.0.2",
     "mocha": "^5.2.0",
     "moment": "^2.24.0",
     "multer": "^1.4.1",
+    "node-fetch": "^2.3.0",
     "nodemailer": "^5.1.1",
     "pg": "^7.8.0",
-    "prisma-client-lib": "^1.25.4",
+    "prisma-client-lib": "^1.25.7",
     "pug": "^2.0.3",
     "rate-limit-redis": "^1.6.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "serve-index": "^1.9.1",
-    "terminal-kit": "^1.26.10",
+    "terminal-kit": "^1.26.11",
     "validator": "^10.11.0"
   },
   "resolutions": {
@@ -66,7 +66,8 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
-    "prisma": "^1.25.4",
+    "npm-check-updates": "^2.15.0",
+    "prisma": "^1.25.7",
     "redoc-cli": "^0.7.0"
   }
 }
